[tool.poetry]
name = "pykafka"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
confluent-kafka = "^2.4.0"
ischedule = "^1.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
