[tool.poetry]
name = "pykafka"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.4.0"
ischedule = "^1.2.7"

[[tool.poetry.source]]
name = "pykafka"
url = "http://194.163.168.102:30035/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
